[project]
name = "pressmint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.41.0",
    "ipykernel>=6.29.5",
    "joblib>=1.5.1",
    "jupyter>=1.1.1",
    "langchain-core>=0.3.69",
    "litellm>=1.74.7",
    "matplotlib>=3.10.3",
    "openai>=1.97.0",
    "seaborn>=0.13.2",
]
